- finished tours section - new props: background-blend-mode, perspective, backface-visibility, box-decoration-break - learned how to rotate over y axis - how to layer multiple images from multiple - fixed clip-path with vendor prefix -webkit - created card component

--- a/Natours/starter/sass/base/_utilities.scss
+++ b/Natours/starter/sass/base/_utilities.scss
@@ -5,6 +5,10 @@
 }
 
 .u-mb {
+  &--huge {
+    margin-top: 10rem;
+  }
+
   &--big {
     margin-bottom: 8rem;
   }
@@ -15,5 +19,23 @@
 
   &--small {
     margin-bottom: 1.5rem;
+  }
+}
+
+.u-mt {
+  &--huge {
+    margin-top: 10rem;
+  }
+
+  &--big {
+    margin-top: 8rem;
+  }
+
+  &--medium {
+    margin-top: 4rem;
+  }
+
+  &--small {
+    margin-top: 1.5rem;
   }
 }
